--- a/portifolio/src/styles/variables.scss
+++ b/portifolio/src/styles/variables.scss
@@ -1,14 +1,15 @@
+@import "~bootstrap/scss/bootstrap";
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
 
-$Poppins: "Poppins", sans-serif;
+// fonts
+$Poppins: "Poppins", sans-serif !important;
+$Typograph: "TYPOGRAPH PRO", sans-serif !important;
 
 // colors
 $dark: rgb(0, 0, 0);
 $light: rgb(255, 255, 255);
-$primary: #5385b6;
-$bg: #4169e1;
-$hover: #ea5c38;
-$secondary: #ee6c4d;
+$primary: #051633;
+$secondary: #0b6e3c;
 $blue: #4169e1;
 
 @import "~bootstrap/scss/bootstrap";
